--- a/templates/etc/rsyslog.d/papertrail.conf.erb
+++ b/templates/etc/rsyslog.d/papertrail.conf.erb
@@ -41,7 +41,7 @@ $ActionQueueTimeoutEnqueue <%= @action_queue_timeout_enqueue %>
 $ActionQueueDiscardSeverity <%= @action_queue_discard_severity %>
 <%- end -%>
 
-*.* @@<%= @host %><% unless @port.empty? %>:<%= @port %><% end %>
+<%= @logger_priority_facility%>.<%= @logger_priority_level%> @@<%= @host %><% unless @port.empty? %>:<%= @port %><% end %>
 
 <% unless @optional_files.empty? %>
 $ModLoad imfile
